Ok I fix elements going off screen and prevented people from scrolling off the right side of the page

--- a/styles.css
+++ b/styles.css
@@ -24,26 +24,32 @@
     box-sizing: border-box;
 }
 
+html{
+    max-width: 100vw;
+}
+
 body{
+    position: relative;
     overflow-x: hidden;
     background-color: var(--bg-color);
     margin: 0;
 }
 
-.ripple-bacground {
+.ripple-background {
     position: fixed;
     height: 100vh;
-    max-width: 100vw;
-    x-overflow: hidden;
+    width: 100vw;
+    overflow: hidden;
     z-index: -1;
 }
-  
+
   
 .circle{
     background-color: hsl(204, 100%, 79%);
     position: absolute;
     border-radius: 50%;
     animation: ripple 15s infinite;
+    overflow-x: hidden;
     box-shadow: 0px 0px 1px 0px #508fb9;
 }
   
@@ -408,7 +414,7 @@ Change logo and main org
     .whatWeDo, .goals{
         position: relative;
         max-width: 100vw;
-        left: 5%;
+        left: 5%
     }
     
     .whatWeDo > div, .goals > div{
